--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <video id="video" width="640" height="480" autoplay></video>
     <canvas id="canvas" style="position: absolute" width="640" height="480"></canvas>
     </div>
-    <script src="mood.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
